welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:5: error: type mismatch;
 found   : Int(80)
 required: Boolean
      case i if (61<=i<=80)=>1
                        ^caughtSpeeding:12: error: type mismatch;
 found   : Int(85)
 required: Boolean
      case i if (66<=i<=85)=>1
                        ^